build: build logical adjustment

--- a/client/views/error/partials/resource.hbs
+++ b/client/views/error/partials/resource.hbs
@@ -1,1 +1,18 @@
-{{!--style--}} {{#content "style" mode="append"}}<link href=/css/vendor.594fba202.css rel=stylesheet><link href=/css/common.9fcb3a992.css rel=stylesheet><link href=/css/error.d41d8cd98.css rel=stylesheet>{{/content}} {{!--script--}} {{#content "script" mode="append"}}<script src=js/manifest.d2ba6c21a.js></script><script src=js/vendor.3d9fca2f8.js></script><script src=js/common.bdf6d7516.js></script><script src=js/error.ae62d55f8.js></script>{{/content}}
+{{!--style--}}
+{{#content "style" mode="append"}}
+
+<link href="/css/vendor.css" rel="stylesheet">
+<link href="/css/common.css" rel="stylesheet">
+<link href="/css/error.css" rel="stylesheet">
+{{/content}}
+
+{{!--script--}}
+{{#content "script" mode="append"}}
+<!--========== JAVASCRIPTS (Load javascripts at bottom, this will reduce page load time) ==========-->
+
+<script type="text/javascript" src="js/manifest.js"></script>
+<script type="text/javascript" src="js/vendor.js"></script>
+<script type="text/javascript" src="js/common.js"></script>
+<script type="text/javascript" src="js/error.js"></script>
+<!--========== END JAVASCRIPTS ==========-->
+{{/content}}
