--- a/client/views/index/style.less
+++ b/client/views/index/style.less
@@ -1,3 +1,8 @@
 .ti-control-play {
   line-height: 1.4;
 }
+
+.s-swiper__arrow-v1--left,
+.s-swiper__arrow-v1--right {
+  line-height: 1.4 !important;
+}
