--- a/client/views/index/partials/content.hbs
+++ b/client/views/index/partials/content.hbs
@@ -7,7 +7,7 @@
                 <div class="g-margin-b-30--xs">
                     <h1 class="g-font-size-35--xs g-font-size-45--sm g-font-size-55--md g-color--white">A Mobile Experience<br>That Inspires Travel</h1>
                 </div>
-                <a class="js__popup__youtube" href="#" title="Intro Video">
+                <a class="js__popup__youtube" href="include/media/mp4_video.mp4" title="Intro Video">
                     <i class="s-icon s-icon--lg s-icon--white-bg g-radius--circle ti-control-play"></i>
                 </a>
             </div>
@@ -18,7 +18,7 @@
                     <h2 class="g-font-size-35--xs g-font-size-45--sm g-font-size-55--md g-color--white">We Craft Experience<br>That Help Brands<br>Stand Out
                     </h2>
                 </div>
-                <a class="js__popup__youtube" href="#" title="Intro Video">
+                <a class="js__popup__youtube" href="include/media/mp4_video.mp4" title="Intro Video">
                     <i class="s-icon s-icon--lg s-icon--white-bg g-radius--circle ti-control-play"></i>
                 </a>
             </div>
