--- a/client/views/index/partials/resource.ejs
+++ b/client/views/index/partials/resource.ejs
@@ -11,6 +11,8 @@
 <!--========== JAVASCRIPTS (Load javascripts at bottom, this will reduce page load time) ==========-->
 <!--leaflet script-->
 <script src="https://cdn.bootcss.com/leaflet/1.2.0/leaflet.js"></script>
+<!--inline manifest-->
+<%=htmlWebpackPlugin.files.webpackManifest%>
 <% for (var js in htmlWebpackPlugin.files.js) { %>
 <script type="text/javascript" src="<%= htmlWebpackPlugin.files.js[js] %>"></script><% } %>
 <!--========== END JAVASCRIPTS ==========-->
